[package]
name = "sqe-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sqe-cli"
path = "src/main.rs"

[features]
# `aws` turns on the Glue + S3 Tables catalog backends for the embedded
# engine (`--catalog-backend glue|s3tables`). Default-on so a normal
# `cargo install` gets it; drop it (`--no-default-features`) for a slim
# build with no AWS SDK weight.
default = ["aws"]
aws = ["sqe-catalog/glue", "sqe-catalog/s3tables"]
# DEP-07: the `delta` feature (read_delta() TVF) is REMOVED for the DataFusion 54
# bump. deltalake-core has no DF 54 release yet. Restore this line and the
# sqe-catalog `delta` feature once delta-rs ships DF 54 support.
# delta = ["sqe-catalog/delta"]

[dependencies]
sqe-core = { path = "../sqe-core" }
sqe-catalog = { path = "../sqe-catalog", default-features = false, features = ["rest", "sql-sqlite", "hadoop"] }
sqe-sql = { path = "../sqe-sql" }
sqe-trino-functions = { path = "../sqe-trino-functions" }
sqe-trino-compat = { path = "../sqe-trino-compat" }
sqe-policy = { path = "../sqe-policy" }
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
datafusion = { workspace = true }
datafusion-functions-json = { workspace = true }
# Embedded persistent catalog: SQLite via iceberg-catalog-sql, exposed
# to DataFusion via iceberg-datafusion. Both ride along the same
# vendored iceberg-rust workspace the cluster already uses.
iceberg = { workspace = true }
iceberg-catalog-sql = { workspace = true }
iceberg-datafusion = { workspace = true }
# DashMap powers the writable catalog's per-name schema cache; same
# concurrency-friendly map iceberg-datafusion uses for its own
# table-level cache.
dashmap = { workspace = true }
tonic = { workspace = true, features = ["transport", "tls-native-roots"] }
tokio = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
rustyline = "15"
rpassword = "7"
reqwest = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
