[package]
name = "sqe-coordinator"
version = "0.1.0"
edition = "2021"

[lib]
name = "sqe_coordinator"
path = "src/lib.rs"

[[bin]]
name = "sqe-coordinator"
path = "src/main.rs"

[[bin]]
name = "sqe-server"
path = "src/bin/sqe_server.rs"

[dependencies]
sqe-core = { path = "../sqe-core" }
sqe-auth = { path = "../sqe-auth" }
sqe-catalog = { path = "../sqe-catalog" }
sqe-sql = { path = "../sqe-sql" }
sqe-policy = { path = "../sqe-policy" }
sqe-planner = { path = "../sqe-planner" }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
sqlparser = { workspace = true }
iceberg = { workspace = true }
parquet = { workspace = true }
sqe-metrics = { path = "../sqe-metrics" }
sqe-trino-compat = { path = "../sqe-trino-compat" }
chrono = { workspace = true }
axum = { workspace = true }
clap = { version = "4", features = ["derive"] }
sqe-worker = { path = "../sqe-worker" }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
sqe-core = { path = "../sqe-core" }
sqe-auth = { path = "../sqe-auth" }
sqe-sql = { path = "../sqe-sql" }
sqe-policy = { path = "../sqe-policy" }
sqe-planner = { path = "../sqe-planner" }
sqe-metrics = { path = "../sqe-metrics" }
sqe-trino-compat = { path = "../sqe-trino-compat" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
