[package]
name = "sqe-coordinator"
version = "0.15.0"
edition = "2021"

[lib]
name = "sqe_coordinator"
path = "src/lib.rs"

[[bin]]
name = "sqe-coordinator"
path = "src/main.rs"

[[bin]]
name = "sqe-server"
path = "src/bin/sqe_server.rs"

[dependencies]
sqe-core = { path = "../sqe-core" }
sqe-auth = { path = "../sqe-auth" }
sqe-catalog = { path = "../sqe-catalog" }
sqe-sql = { path = "../sqe-sql" }
sqe-policy = { path = "../sqe-policy" }
sqe-planner = { path = "../sqe-planner" }
sqe-trino-functions = { path = "../sqe-trino-functions" }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
tonic = { workspace = true, features = ["tls-ring"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }
governor = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
datafusion-functions-json = { workspace = true }
datafusion-expr = { workspace = true }
sqlparser = { workspace = true }
iceberg = { workspace = true }
parquet = { workspace = true }
sqe-metrics = { path = "../sqe-metrics" }
sqe-trino-compat = { path = "../sqe-trino-compat" }
sqe-lineage = { path = "../sqe-lineage" }
prometheus = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
subtle = "2"
sqe-worker = { path = "../sqe-worker" }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
sqe-core = { path = "../sqe-core" }
sqe-auth = { path = "../sqe-auth" }
# Tests for the runtime catalog registry build a real SQLite-backed
# Iceberg catalog at a tempdir, so we need the `sql-sqlite` feature
# on top of the default set (`sql-postgres`, `glue`, ...). Cargo
# unifies dev + non-dev features so this stays additive.
sqe-catalog = { path = "../sqe-catalog", features = ["sql-sqlite"] }
sqe-sql = { path = "../sqe-sql" }
sqe-policy = { path = "../sqe-policy" }
sqe-planner = { path = "../sqe-planner" }
sqe-metrics = { path = "../sqe-metrics" }
sqe-trino-compat = { path = "../sqe-trino-compat" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
iceberg = { workspace = true }
sqlparser = { workspace = true }
parquet = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
tempfile = "3"
datafusion-functions-json = { workspace = true }
datafusion = { workspace = true }
