[package]
name = "sqe-coordinator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Opt-in for integration tests that spin up a SQLite-backed Iceberg
# catalog. Activating this through a dev-dep used to leak `sql-sqlite`
# into every workspace consumer via Cargo's feature unification. Tests
# now run via `cargo test -p sqe-coordinator --features test-sqlite`.
test-sqlite = ["sqe-catalog/sql-sqlite"]

[lib]
name = "sqe_coordinator"
path = "src/lib.rs"

[[bin]]
name = "sqe-coordinator"
path = "src/main.rs"

[[bin]]
name = "sqe-server"
path = "src/bin/sqe_server.rs"

[dependencies]
sqe-core = { path = "../sqe-core" }
sqe-auth = { path = "../sqe-auth" }
sqe-catalog = { path = "../sqe-catalog" }
sqe-sql = { path = "../sqe-sql" }
sqe-policy = { path = "../sqe-policy" }
sqe-planner = { path = "../sqe-planner" }
sqe-trino-functions = { path = "../sqe-trino-functions" }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
tonic = { workspace = true, features = ["tls-ring"] }
# QUACK-05: TLS for the axum-based Quack listener. `tls-rustls-no-provider`
# avoids pulling rustls/aws-lc-rs; we install the ring provider explicitly so
# the Quack endpoint uses the same crypto backend as the tonic Flight path.
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", features = ["ring"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }
governor = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
datafusion-functions-json = { workspace = true }
datafusion-expr = { workspace = true }
sqlparser = { workspace = true }
iceberg = { workspace = true }
parquet = { workspace = true }
sqe-metrics = { path = "../sqe-metrics" }
sqe-trino-compat = { path = "../sqe-trino-compat" }
sqe-quack-server = { path = "../sqe-quack-server" }
sqe-quack-client = { path = "../sqe-quack-client" }
sqe-lineage = { path = "../sqe-lineage" }
prometheus = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
subtle = { workspace = true }
sqe-worker = { path = "../sqe-worker" }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
sqe-core = { path = "../sqe-core" }
sqe-auth = { path = "../sqe-auth" }
sqe-quack-server = { path = "../sqe-quack-server" }
sqe-quack-wire = { path = "../sqe-quack-wire" }
# Tests for the runtime catalog registry need the `sql-sqlite` backend
# on `sqe-catalog`. Enable through the `test-sqlite` feature instead of
# a dev-dep override so feature unification does not leak the SQLite
# driver into every workspace build.
sqe-catalog = { path = "../sqe-catalog" }
sqe-sql = { path = "../sqe-sql" }
sqe-policy = { path = "../sqe-policy" }
sqe-planner = { path = "../sqe-planner" }
sqe-metrics = { path = "../sqe-metrics" }
sqe-trino-compat = { path = "../sqe-trino-compat" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
iceberg = { workspace = true }
sqlparser = { workspace = true }
parquet = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
datafusion-functions-json = { workspace = true }
datafusion = { workspace = true }
