[package]
name = "sqe-core"
version = "0.31.4"
edition = "2021"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
zeroize = "1"
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
