[package]
name = "sqe-metrics"
version = "0.31.4"
edition = "2021"

[dependencies]
prometheus = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
regex-lite = "0.1"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
