[package]
name = "sqe-planner"
version = "0.15.0"
edition = "2021"

[dependencies]
sqe-core = { path = "../sqe-core" }
datafusion = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
arrow = { workspace = true }
