[package]
name = "sqe-policy"
version = "0.15.0"
edition = "2021"

[dependencies]
sqe-core = { path = "../sqe-core" }
datafusion = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
