[package]
name = "sqe-quack-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sqe-quack-wire = { path = "../sqe-quack-wire" }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
thiserror = { workspace = true }
url = { workspace = true }
