[package]
name = "sqe-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sqe-core = { path = "../sqe-core" }
sqlparser = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
