[package]
name = "sqe-trino-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sqe-core = { path = "../sqe-core" }
sqe-auth = { path = "../sqe-auth" }
hex = { workspace = true }
sha2 = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
