[package]
name = "sqe-worker"
version = "0.1.0"
edition = "2021"

[lib]
name = "sqe_worker"
path = "src/lib.rs"

[[bin]]
name = "sqe-worker"
path = "src/main.rs"

[dependencies]
sqe-core = { path = "../sqe-core" }
sqe-planner = { path = "../sqe-planner" }
sqe-metrics = { path = "../sqe-metrics" }
datafusion = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
